# wt

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yaml
src/: arguments.rs  config.rs  main.rs  style.rs  subcommand.rs  worktree.rs
src/subcommand/: convert.rs  create.rs  hook.rs  init.rs  init.zsh  list.rs  remove.rs  switch.rs
tests/: integration.rs
