[package]
name = "wt"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[lints.rust]
unreachable_pub = "deny"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
skim = { version = "2.0.2", default-features = false, features = ["cli"] }

[dev-dependencies]
tempfile = "3.24.0"
