[package]
name = "wt-cli"
version = "0.1.1"
authors = ["Liam Scalzulli <liam@scalzulli.com>"]
categories = ["command-line-utilities"]
description = "A simple git worktree manager"
edition = "2024"
homepage = "https://github.com/terror/wt"
license = "CC0-1.0"
repository = "https://github.com/terror/wt"

[[bin]]
name = "wt"
path = "src/main.rs"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
wildcard_imports = "allow"

[lints.rust]
unreachable_pub = "deny"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
confy = "0.6.1"
glob = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
skim = { version = "2.0.2", default-features = false, features = ["cli"] }

[dev-dependencies]
tempfile = "3.24.0"
